--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
 itertools = "0.10.0"
 nom = "6"
